--- a/app/src/main/res/layout/fragment_arp_spoof.xml
+++ b/app/src/main/res/layout/fragment_arp_spoof.xml
@@ -7,11 +7,11 @@
     tools:context=".Fragments.ArpSpoofFragment">
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/source_ip_input"
 
         style="@style/edit_text_style"
 
-        android:hint="Enter IP Address"
+        android:hint="Enter source IP Address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -22,11 +22,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/source_mac_input"
 
         style="@style/edit_text_style"
 
-        android:hint="Enter MAC Address"
+        android:hint="Enter source MAC Address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -34,10 +34,10 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/source_ip_input" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/target_ip_input"
 
         style="@style/edit_text_style"
 
@@ -49,10 +49,10 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/source_mac_input" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/target_mac_input"
 
         style="@style/edit_text_style"
 
@@ -64,7 +64,7 @@
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/target_ip_input" />
 
     <Button
         android:id="@+id/button"
@@ -77,7 +77,7 @@
         android:text="Start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/target_mac_input" />
 
     <TextView
         android:id="@+id/info_view"
