--- a/app/src/main/res/layout/fragment_arp_spoof.xml
+++ b/app/src/main/res/layout/fragment_arp_spoof.xml
@@ -11,7 +11,7 @@
 
         style="@style/edit_text_style"
 
-        android:hint="Enter source IP Address"
+        android:hint="@string/ArpSpoofFragment_EditText_source_ip_input_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -26,7 +26,7 @@
 
         style="@style/edit_text_style"
 
-        android:hint="Enter source MAC Address"
+        android:hint="@string/ArpSpoofFragment_EditText_source_mac_input_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -41,7 +41,7 @@
 
         style="@style/edit_text_style"
 
-        android:hint="Enter IP Address"
+        android:hint="@string/ArpSpoofFragment_EditText_target_ip_input_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -56,7 +56,7 @@
 
         style="@style/edit_text_style"
 
-        android:hint="Enter MAC Address"
+        android:hint="@string/ArpSpoofFragment_EditText_target_mac_input_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -67,14 +67,14 @@
         app:layout_constraintTop_toBottomOf="@+id/target_ip_input" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/start_spoof_btn"
 
         style="@style/button_style"
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Start"
+        android:text="@string/ArpSpoofFragment_Button_start_spoof_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/target_mac_input" />
@@ -93,6 +93,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/start_spoof_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
