--- a/app/src/main/res/layout/fragment_arp_spoof.xml
+++ b/app/src/main/res/layout/fragment_arp_spoof.xml
@@ -74,35 +74,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="150dp"
         android:text="@string/ArpSpoofFragment_Button_start_spoof_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/target_mac_input" />
 
-    <TextView
-        android:id="@+id/info_view"
+    <Button
+        android:id="@+id/kill_process_btn"
+
+        style="@style/button_style"
+        android:backgroundTint="@color/red"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="150dp"
+        android:text="@string/ArpSpoofFragment_Button_kill_process_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/target_mac_input" />
+
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="60dp"
-
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-
-        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_spoof_btn" />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/info_view"
-        app:layout_constraintEnd_toEndOf="@+id/info_view"
-        app:layout_constraintStart_toStartOf="@+id/info_view"
-        app:layout_constraintTop_toTopOf="@+id/info_view" />
+        app:layout_constraintTop_toBottomOf="@+id/start_spoof_btn">
+        <TextView
+            android:id="@+id/info_view"
+            style="@style/text_view_info_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
