--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -21,10 +21,10 @@
         app:layout_constraintVertical_bias="0.666" />
 
     <TextView
+        android:id="@+id/app_version"
         style="@style/text_view_info_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_version_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
