--- a/app/src/main/res/layout/fragment_wifi_scanner.xml
+++ b/app/src/main/res/layout/fragment_wifi_scanner.xml
@@ -56,6 +56,22 @@
         app:layout_constraintVertical_bias="1.0" />
 
 
+    <!--
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/wifiRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scanButton" />
+    -->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
