--- a/app/src/main/res/menu/tool_bar.xml
+++ b/app/src/main/res/menu/tool_bar.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/wifi_scanner"
+        android:icon="@drawable/save_24"
+        android:title="Save"
+        />
 </menu>
