--- a/app/src/main/res/menu/tool_bar.xml
+++ b/app/src/main/res/menu/tool_bar.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/wifi_scanner"
         android:icon="@drawable/save_24"
-        android:title="Save"
+        android:title="@string/toolbar_save"
         />
 </menu>
